scripts/nullaway/annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8.txt
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:29: error: [NullAway] @NonNull field jsonResponse not initialized
	private JsonObject jsonResponse;
	                   ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:31: error: [NullAway] @NonNull field uriBld not initialized
	protected URIBuilder uriBld;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:33: error: [NullAway] @NonNull field page not initialized
	protected Integer page;
	                  ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:107: error: [NullAway] dereferenced expression uri is @Nullable
			url = uri.toURL();
			         ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:113: error: [NullAway] dereferenced expression url is @Nullable
			response = url.openStream();
			              ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:116: error: [NullAway] dereferenced expression uri is @Nullable
			log.debug(uri.toString());
			             ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:131: error: [NullAway] assigning @Nullable expression to @NonNull field
			jsonResponse =  null;
			             ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/Artist.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 5), id (line 6) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Artist(){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return currentArtist;
		^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:140: error: [NullAway] dereferenced expression currentArtist is @Nullable
		uri = queryByArtistId(currentArtist.getId());
		                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:183: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [NullAway] unboxing of a @Nullable value
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                              ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [NullAway] unboxing of a @Nullable value
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [NullAway] passing @Nullable parameter 'lat' where @NonNull is required
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                              ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [NullAway] passing @Nullable parameter 'lng' where @NonNull is required
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:110: error: [NullAway] unboxing of a @Nullable value
			venue = new Venue(	lat, 
			                  	^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:111: error: [NullAway] unboxing of a @Nullable value
								lng, 
								^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:110: error: [NullAway] passing @Nullable parameter 'lat' where @NonNull is required
			venue = new Venue(	lat, 
			                  	^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:111: error: [NullAway] passing @Nullable parameter 'lng' where @NonNull is required
								lng, 
								^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [NullAway] unboxing of a @Nullable value
			city = new City(name,country,lat,lng);;
			                             ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [NullAway] unboxing of a @Nullable value
			city = new City(name,country,lat,lng);;
			                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [NullAway] passing @Nullable parameter 'lat' where @NonNull is required
			city = new City(name,country,lat,lng);;
			                             ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [NullAway] passing @Nullable parameter 'lng' where @NonNull is required
			city = new City(name,country,lat,lng);;
			                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/ArtistSearch.java:136: error: [NullAway] dereferenced expression currentArtist is @Nullable
			return list(currentArtist.getName());
			                         ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:112: error: [NullAway] dereferenced expression locations is @Nullable
			locations.add(fullLocation);
			         ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/jsongkick/App.java:69: error: [NullAway] enhanced-for expression fullLocations is @Nullable
		for(FullLocation fullLoc : fullLocations)
		                           ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/jsongkick/App.java:76: error: [NullAway] enhanced-for expression fullLocations is @Nullable
			for(FullLocation fullLoc : fullLocations)
			                           ^
    (see http://t.uber.com/nullaway )
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/jsongkick/App.java:116: error: [NullAway] dereferenced expression artists is @Nullable
		 for(Artist artist: artists.subList(0, 10)){
		                           ^
    (see http://t.uber.com/nullaway )
28 errors
